--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "enqueue/enqueue-bundle": "^0.7|^0.8",
         "friendsofphp/php-cs-fixer": "^2.10",
         "league/flysystem": "^1.0",
+        "liip/rmt": "^1.3",
         "psr/log": "^1.0",
         "symfony/browser-kit": "^3.4|^4.0",
         "symfony/console": "^3.4|^4.0",
